--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 				<input type="text" placeholder="Search in your city." data-bind="value: query" id="search">
 				<button type="submit">Submit</button>
 			</form><br/>
-			<h2>My City List of Neighborhood</h2>
+			<h2>City List of Neighborhood from Wolfgang Reiter</h2>
 			<ul id="cities" data-bind="foreach: cityList">
 				<li data-bind="click: $parent.setCurrentCity,text: city, css: {'active': active}"></li>
 			</ul>
