--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
 		<div id="map"></div>
 
 
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8t0hbWYnjtgDDXNdfgidOGPmU5In0ikk&libraries=places"
-		></script>
-		<script type="text/javascript" src="bower_components/knockout/dist/knockout.js"></script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8t0hbWYnjtgDDXNdfgidOGPmU5In0ikk&libraries=places&callback=initMap" onerror="googleMapError()"></script>
+
+		<script src="bower_components/knockout/dist/knockout.js"></script>
 		<!-- build:js js/app.min.js -->
 		<script src="js/app.js"></script>
 		<!-- endbuild -->
