--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,15 @@
 			</div>
 		</div>
 		<div id="map"></div>
+		<div id="yelpDetail">
+			<img class="yelp_img" data-bind="visible: yelp_img, attr: { src: yelp_img }" alt="" />
+			<p data-bind="visible: yelp_rating">Rating: <img class="rating" data-bind="attr: { src: yelp_rating }" alt="Rating" /><em data-bind="text: "></em></p>
+			<p data-bind="text: yelp_snippet"></p>
+
+			<p data-bind="text: yelp_phone"></p>
+
+			<p data-bind="visible: yelp_url"><a data-bind="attr: { href: yelp_url }">Yelp Url</a></p>
+		</div>
 
 
 		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8t0hbWYnjtgDDXNdfgidOGPmU5In0ikk&libraries=places&callback=initMap" onerror="googleMapError()"></script>
