--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, minimum-scale=1.0">
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
-		<script src="bower_components/underscore/underscore-min.js"></script>
+		<!-- <script src="bower_components/underscore/underscore-min.js"></script> -->
 
 		<!-- build:css css/app.css -->
 		<!-- Bootstrap Core CSS -->
